[package]
name = "longboard"
version = "0.1.0"
authors = ["adamisrusty <adamgutierreztx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ui
tui = { version = "0.14.0", features = ["crossterm"], default-features = false}
crossterm = "0.19.0"

# solana
solana-client = "1.5.1"
solana-sdk = "1.5.1"
bs58 = "0.4.0"

# data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"